| Bug #24631 | DD files aren't deleted when stopped node started again | ||
|---|---|---|---|
| Submitted: | 27 Nov 2006 20:57 | Modified: | 23 May 2007 17:50 |
| Reporter: | Serge Kozlov | ||
| Status: | Closed | ||
| Category: | Server: ClusterDD | Severity: | S2 (Serious) |
| Version: | 5.1.14-bk | OS: | Linux (Linux FC4) |
| Assigned to: | Jonas Oreland | Target Version: | |
[27 Nov 2006 20:57]
Serge Kozlov
[28 Nov 2006 0:56]
Jonathan Miller
A better question is should we allow DDL operations when there is a data node missing out of the cluster, or should we simply return an error stating that this is not aloowed on partial clusters? /jeb
[28 Nov 2006 1:12]
Jonas Oreland
should be supported. this is a bug
[15 May 2007 9:08]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/26668 ChangeSet@1.2517, 2007-05-15 09:08:16+02:00, jonas@perch.ndb.mysql.com +6 -0 ndb - bug#24631 add Dbdict::restartDropObj*
[23 May 2007 10:24]
Bugs System
Pushed into 5.1.19-beta
[23 May 2007 17:50]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at
http://dev.mysql.com/doc/en/installing-source.html
Documented bugfix in 5.1.19 changelog, added note to the 5.1 Manual discussion of partial
starts.
[10 Oct 2008 13:36]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/56020 2995 Jonas Oreland 2008-10-10 ndb - 6.4 - testDict -n Bug24631 T1 Make sure that CREATE_OLD_PASS and DROP_OLD_PASS does not overwrite master state (and fix bugs found while testing it)
