ndb - bug#24631   add Dbdict::restartDropObj*